# luigiflow

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
docker/test/: Dockerfile
luigiflow/: __init__.py  config.py  container.py  custom_params.py  experiment.py  experiment_repository.py  experiments_repository.py  initialize.py  interface.py  runner.py  savers.py  serializer.py  task.py  task_repository.py  testing.py  types.py
luigiflow/config/: run.py
luigiflow/domain/: README.md  collection.py  protocols.py  serializer.py  tag.py  tag_manager.py  tag_param.py  task.py  task_run.py
luigiflow/infrastructure/: mlflow.py
luigiflow/infrastructure/luigi/: task.py
luigiflow/infrastructure/mlflow/: collection.py  tag_param.py  task_run.py
luigiflow/task/: __init__.py  protocol.py  task.py  task_types.py
luigiflow/utils/: savers.py  testing.py
tests/: conftest.py  test_cli.py  test_config.py  test_container.py  test_experiments_respository.py  test_integrity.py  test_interface.py  test_luigiflow.py  test_params.py  test_task.py  test_task_repository.py
tests/domain/: test_params.py  test_serializer.py  test_tags_params.py
tests/fixture/: config.jsonnet
tests/infrastructure/luigi/: test_custom_params.py
tests/infrastructure/mlflow/: test_params.py  test_tag_manager.py  test_task.py  test_task_repository.py
