[tool.poetry]
name = "luigiflow"
version = "0.1.0"
description = ""
authors = ["Wataru Hirota <wataru@whiro.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
luigi = "^3.0.3"
mlflow = "^1.22.0"
pandas = "^1.3.5"
tqdm = "^4.62.3"
jsonnet = "^0.18.0"
toml = "^0.10.2"
registrable = "^0.0.4"
dependency-injector = "^4.37.0"
scipy = "^1.8.0"
waitress = "2.1.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
isort = "^5.10.1"
black = "^21.12b0"
mypy = "^0.930"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = 'luigiflow/testing.py'

[tool.mypy]
ignore_missing_imports = true
