[tool.poetry]
name = "luigiflow"
version = "0.1.0"
description = ""
authors = ["Wataru Hirota <wataru@whiro.me>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
luigi = "^3"
mlflow = "^1"
pandas = "^1"
tqdm = "^4"
jsonnet = "^0.18"
registrable = "^0.0.4"
pydantic = "^1"
typing-extensions = "^4"

[tool.poetry.dev-dependencies]
pytest = "^7"
isort = "^5"
black = "22.6.0"
mypy = "^0.971"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py38', 'py39']
include = '\.pyi?$'
extend-exclude = 'luigiflow/testing.py'

[tool.mypy]
ignore_missing_imports = true
