[tool.poetry]
name = "luigiflow"
version = "0.1.0"
description = ""
authors = ["Wataru Hirota <wataru@whiro.me>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pip = "*"
luigi = "^3"
mlflow = "^2"
pandas = "^1"
tqdm = "^4"
jsonnet = "^0"
registrable = "^0.0.4"
pydantic = "^1"
typing-extensions = "^4"

[tool.poetry.dev-dependencies]
pytest = "*"
isort = "*"
black = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "cython>=0.29.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = 'luigiflow/testing.py'

[tool.mypy]
ignore_missing_imports = true
